force-app/main/default/objects/User/fields/maps__ReceiveBatchExceptionEmails__c.field-meta.xml
<CustomField>
    <fullName>maps__ReceiveBatchExceptionEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Batch Exception Emails</label>
    <type>Checkbox</type>
</CustomField>