force-app/main/default/objects/User/fields/Persona_Description__c.field-meta.xml
<CustomField>
    <fullName>Persona_Description__c</fullName>
    <inlineHelpText>For the Log Me In component</inlineHelpText>
    <label>Persona Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>