force-app/main/default/objects/User/fields/Primary_Demo_User__c.field-meta.xml
<CustomField>
    <fullName>Primary_Demo_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Demo User</label>
    <type>Checkbox</type>
</CustomField>