force-app/main/default/objects/User/listViews/Primary_Demo_Users.listView-meta.xml
<ListView>
    <fullName>Primary_Demo_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Demo_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>*Primary Demo Users</label>
    <language>en_US</language>
</ListView>